--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="kartu-nama">
-        <h1>Nama Lengkap</h1>
-        <p>Posisi / Jabatan</p>
-        <p>Perusahaan</p>
+        <img src="foto.jpg" alt="Foto Profil" class="foto-profil">
+        <h1>Nawal Haromaen</h1>
+        <p>Mahasiswa</p>
+        <p>D4 TI</p>
         <div class="kontak">
-            <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
-            <p>Telepon: <a href="tel:+6281234567890">+62 812-3456-7890</a></p>
+            <p>Email: <a href="mailto:email@example.com">nawalharomaen@gmail.com</a></p>
+            <p>Telepon: <a href="tel:+6281234567890">+62 895-3568-71030</a></p>
         </div>
     </div>
 </body>
