--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="kartu-nama">
-        <img src="foto.jpg" alt="Foto Profil" class="foto-profil">
+        <img src="#avacouple.jpeg" alt="Foto Profil" class="foto-profil">
         <h1>Nawal Haromaen</h1>
         <p>Mahasiswa</p>
         <p>D4 TI</p>
