--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kartu Nama</title>
+    <title>Nametag</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="kartu-nama">
-        <img src="#avacouple.jpeg" alt="Foto Profil" class="foto-profil">
-        <h1>Nawal Haromaen</h1>
-        <p>Mahasiswa</p>
-        <p>D4 TI</p>
-        <div class="kontak">
-            <p>Email: <a href="mailto:email@example.com">nawalharomaen@gmail.com</a></p>
-            <p>Telepon: <a href="tel:+6281234567890">+62 895-3568-71030</a></p>
+    <div class="nametag">
+        <div class="foto-container">
+            <img src="#avacouple.jpeg" alt="Foto Profil" class="foto-profil">
+        </div>
+        <div class="info-container">
+            <h1>Nawal Haromaen</h1>
+            <p>Mahasiswa</p>
+            <p>D4 Ti</p>
+        </div>
+        <div class="qr-container">
+            <img src="qrcode.png" alt="QR Code" class="qr-code">
         </div>
     </div>
 </body>
