--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>D4 Ti</p>
         </div>
         <div class="qr-container">
-            <img src="qrcode.png" alt="QR Code" class="qr-code">
+            <img src="Kartu Nama.png" alt="QR Code" class="qr-code">
         </div>
     </div>
 </body>
