--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="nametag">
         <div class="foto-container">
-            <img src="#avacouple.jpeg" alt="Foto Profil" class="foto-profil">
+            <img src="pp.jpeg" alt="Foto Profil" class="foto-profil">
         </div>
         <div class="info-container">
             <h1>Nawal Haromaen</h1>
