--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <img src="pp.jpeg" alt="Foto Profil" class="foto-profil">
         </div>
         <div class="info-container">
-            <h1>Nawal Haromaen</h1>
-            <p>Mahasiswa</p>
+            <h1>Open Editor</h1>
+            <p>Im Nawal Haromaen</p>
             <p>D4 Ti</p>
         </div>
         <div class="qr-container">
