--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <div class="info-container">
             <h1>Open Editor</h1>
             <p>Im Nawal Haromaen</p>
-            <p>D4 Ti</p>
+            <p>My skils:Html, css, and JAvascript</p>
+            <p>Rp.--</p>
         </div>
         <div class="qr-container">
             <img src="Kartu Nama.png" alt="QR Code" class="qr-code">
