--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="pp.jpeg" alt="Foto Profil" class="foto-profil">
         </div>
         <div class="info-container">
-            <h1>Open Editor</h1>
+            <h1>Open service</h1>
             <p>Im Nawal Haromaen</p>
             <p>My skils:Html, css, and JAvascript</p>
             <p>Rp.20k/jam</p>
