--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <p>My skils:Html, css, and JAvascript</p>
             <p>Rp.20k/jam</p>
         </div>
+        <div class="kontak">
+            <p><strong>Contact Me:</strong></p>
+            <p>📷 <a href="https://instagram.com/username" target="_blank">@username</a></p>
+            <p>📧 <a href="mailto:example@mail.com">example@mail.com</a></p>
+            <p>📱 <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
+        </div>
+    </div>
         <div class="qr-container">
             <img src="Kartu Nama.png" alt="QR Code" class="qr-code">
         </div>
