--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
         <div class="foto-container">
             <img src="pp.jpeg" alt="Foto Profil" class="foto-profil">
         </div>
-        <div class="info-container">
-            <h1>Open service</h1>
-            <p>Im Nawal Haromaen</p>
-            <p>My skils:Html, css, and JAvascript</p>
-            <p>Rp.20k/jam</p>
-        </div>
-        <div class="kontak">
-            <p><strong>Contact Me:</strong></p>
-            <p>📷 <a href="https://instagram.com/username" target="_blank">@username</a></p>
-            <p>📧 <a href="mailto:example@mail.com">example@mail.com</a></p>
-            <p>📱 <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
-        </div>
-    </div>
-        <div class="qr-container">
-            <img src="Kartu Nama.png" alt="QR Code" class="qr-code">
+        <div class="content-container">
+            <div class="info-container">
+                <h1>Open service</h1>
+                <p>Im Nawal Haromaen</p>
+                <p>My skills: HTML, CSS, and JavaScript</p>
+                <p>Rp.20k/jam</p>
+                <div class="kontak">
+                    <p><strong>Contact Me:</strong></p>
+                    <p>📷 <a href="https://instagram.com/username" target="_blank">@username</a></p>
+                    <p>📧 <a href="mailto:example@mail.com">example@mail.com</a></p>
+                    <p>📱 <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
+                </div>
+            </div>
+            <div class="qr-container">
+                <img src="Kartu Nama.png" alt="QR Code" class="qr-code">
+            </div>
         </div>
     </div>
 </body>
