--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nametag</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="script.js"></script>
 </head>
+
 <body>
     <div class="nametag">
         <div class="foto-container">
@@ -29,5 +32,7 @@
             </div>
         </div>
     </div>
+    <div id="content">Loading....</div>
 </body>
+
 </html>
