--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <p>Rp.20k/jam</p>
                 <div class="kontak">
                     <p><strong>Contact Me:</strong></p>
-                    <p>📷 <a href="https://instagram.com/username" target="_blank"></a></p>
-                    <p>📧 <a href="mailto:example@mail.com">example@mail.com</a></p>
+                    <p>📷 <a href="https://instagram.com/username" target="_blank">Instagram</a></p>
+                    <p>📧 <a href="mailto:example@mail.com">Github</a></p>
                     <p>📱 <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
                 </div>
             </div>
