--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
                 <p>Im Nawal Haromaen</p>
                 <p>My skills: HTML, CSS, and JavaScript</p>
                 <p>Rp.20k/jam</p>
-                <div class="kontak">
-                    <p><strong>Contact Me:</strong></p>
-                    <p>📷 <a href="https://instagram.com/username" target="_blank">Instagram</a></p>
-                    <p>📧 <a href="mailto:example@mail.com">Github</a></p>
-                    <p>📱 <a href="https://wa.me/6281234567890" target="_blank">+62 812-3456-7890</a></p>
+                <div class="social-icons">
+                    <a href="https://wa.me/" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://github.com/" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://instagram.com/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="qr-container">
