--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="qr-container">
-                <img src="Kartu Nama.png" alt="QR Code" class="qr-code">
+                <img src="" alt="QR Code" class="qr-code">
             </div>
         </div>
     </div>
