--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Nametag</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
