--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <p>My skills: HTML, CSS, and JavaScript</p>
                 <p>Rp.20k/jam</p>
                 <div class="social-icons">
-                    <a href="https://wa.me/6295356871030" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                    <a href="https://github.com/Nawal886" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="https://www.instagram.com/harom_ein" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    <a target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="qr-container">
