--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <p>My skills: HTML, CSS, and JavaScript</p>
                 <p>Rp.20k/jam</p>
                 <div class="social-icons">
-                    <a target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                    <a target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-                    <a target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+                    <h3 id="tex"></h3>
+                   <a><i class="fa-brands fa-instagram" id="instagram"></i></a>
+                   <a><i class="fa-brands fa-whatsapp" id="whatsapp"></i></a>
+                   <a><i class="fa-brands fa-github" id="github"></i></a>
                 </div>
             </div>
             <div class="qr-container">
