--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="nametag">
         <div class="foto-container">
-            <img src="pp.jpeg" alt="Foto Profil" class="foto-profil">
+            <img src="pp.jpg" alt="Foto Profil" class="foto-profil">
         </div>
         <div class="content-container">
             <div class="info-container">
