--- a/index.html
+++ b/index.html
@@ -11,29 +11,7 @@
 </head>
 
 <body>
-    <div class="nametag">
-        <div class="foto-container">
-            <img src="pp.jpg" alt="Foto Profil" class="foto-profil">
-        </div>
-        <div class="content-container">
-            <div class="info-container">
-                <h1>Open service</h1>
-                <p>Im Nawal Haromaen</p>
-                <p>My skills: HTML, CSS, and JavaScript</p>
-                <p>Rp.20k/jam</p>
-                <div class="social-icons">
-                    <h3 id="tex"></h3>
-                   <a><i class="fa-brands fa-instagram" id="instagram"></i></a>
-                   <a><i class="fa-brands fa-whatsapp" id="whatsapp"></i></a>
-                   <a><i class="fa-brands fa-github" id="github"></i></a>
-                </div>
-            </div>
-            <div class="qr-container">
-                <img src="" alt="QR Code" class="qr-code">
-            </div>
-        </div>
-    </div>
-    <div id="content">Loading....</div>
+    <div id="pengganti dirinya">Loading....</div>
 </body>
 
 </html>
