--- a/home.html
+++ b/home.html
@@ -1,17 +1,27 @@
 <div>
-<div id="avatar"></div>
-<h1 id="nama"></h1>
-<p id="occupation"></p>
-<blockquote id="quote"></blockquote>
-<div id="about"></div>
-<ul id="skills"></ul>
-<p id="harga"></p>
-<p id="rate"></p>
-<div id="social-links"></div>
+    <div class="card">
+        <div class="card-avatar" id="avatar"></div>
+        <div class="card-details">
+            <div class="name" id="nama"></div>
+            <div class="occupation" id="occupation"></div>
+            <div class="quote" id="quote"></div>
+            <div class="card-about" id="about"></div>
+            <div class="skillset">
+                <h2>My Skillset</h2>
+                <ul id="skills"></ul>
+            </div>
+            <div class="rate-hour">
+                <span class="value" id="harga"></span>
+                <span class="label" id="rate"></span>
+            </div>
+            <div class="card-footer" id="social-links"></div>
+        </div>
+    </div>
 
-<!-- Modal untuk menampilkan avatar lebih besar -->
-<div id="modal" class="modal">
-  <img id="modalImage" class="modal-content">
-</div>
+    <div class="modal" id="modal">
+        <img src="" alt="Foto profil" id="modalImage">
+    </div>
+
+    <script src="script.js"></script>
 
 </div>
