--- a/home.html
+++ b/home.html
@@ -1,24 +1,20 @@
-<div>
-    <div class="card">
-        <div class="card-avatar" id="avatar"></div>
-        <div class="card-details">
-            <div class="name" id="nama"></div>
-            <div class="occupation" id="occupation"></div>
-            <div class="quote" id="quote"></div>
-            <div class="card-about" id="about"></div>
-            <div class="skillset">
-                <h2>My Skillset</h2>
-                <ul id="skills"></ul>
-            </div>
-            <div class="rate-hour">
-                <span class="value" id="harga"></span>
-                <span class="label" id="rate"></span>
-            </div>
-            <div class="card-footer" id="social-links"></div>
+<div class="card">
+    <div id="avatar"></div>
+    <div class="card-details">
+        <h2 id="nama"></h2>
+        <p id="occupation"></p>
+        <blockquote id="quote"></blockquote>
+        <div id="about"></div>
+        <h3>My Skillset</h3>
+        <ul id="skills"></ul>
+        <div class="rate-hour">
+            <span class="value" id="harga"></span>
+            <span class="label" id="rate"></span>
         </div>
+        <div id="social-links"></div>
     </div>
+</div>
 
-    <div class="modal" id="modal">
-        <img src="" alt="Foto profil" id="modalImage">
-    </div>
+<div class="modal" id="modal">
+    <img src="" alt="Foto Profil" id="modalImage">
 </div>
